# magnum

./: LICENSE  README.md  magnum.cabal
src/Numeric/: Magnum.hs
test/: Main.hs
