name:                magnum
version:             0.1
synopsis:
  Read/show Num with an SI postfix
description:
  Read/show Num with an SI postfix.
homepage:            https://github.com/jonascarpay/magnum#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpy
maintainer:          jonascarpay@gmail.com
copyright:           2019 Jonas Carpay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Numeric.Magnum
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
