name:                magnum
version:             0.1
synopsis:
  Read/show Num with an SI postfix
description:
  Read/show Num with an SI postfix.
homepage:            https://github.com/jonascarpay/magnum#readme
license:             BSD3
license-file:        LICENSE
author:              Jonas Carpy
maintainer:          jonascarpay@gmail.com
copyright:           2019 Jonas Carpay
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Numeric.Magnum
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  ghc-options:
    -Wall

test-suite magnum-test
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Main.hs
  default-language:
    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , magnum
    , QuickCheck
  ghc-options:
    -Wall

